--- a/gmtk-jam-2017.css
+++ b/gmtk-jam-2017.css
@@ -7,5 +7,9 @@ general
 specific
 ------*/
 .wrapper {
-  border: 1px solid black;
+  width: 1024px;
+  height: 768px;
+  margin: auto;
+  padding: 0;
+  background-color: black;
 }
