Player spins on keypress.

--- a/gmtk-jam-2017.css
+++ b/gmtk-jam-2017.css
@@ -21,3 +21,9 @@ specific
   border: 1px solid white;
   background-color: green;
 }
+
+@keyframes spin {
+  100% {
+    transform: rotate( 360deg );
+  }
+}
