Add screenshake when player gets hit.

--- a/gmtk-jam-2017.css
+++ b/gmtk-jam-2017.css
@@ -123,6 +123,16 @@ animations
   }
 }
 
+@keyframes screenshake3 {
+  33% {
+    left: -100px;
+  }
+
+  66% {
+    left: 100px;
+  }
+}
+
 .paused {
   animation-play-state: paused !important;
 }
